--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <script
       src="https://kit.fontawesome.com/a13b999530.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="CSS/main.css" />
+    <link rel="stylesheet" href="/CSS/main.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -14,8 +14,8 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <link rel="stylesheet" href="navbarCSS.css" />
-    <link rel="stylesheet" href="CSS/Main2.css" />
+    <link rel="stylesheet" href="/CSS/navbarCSS.css" />
+    <link rel="stylesheet" href="/CSS/Main2.css" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
