--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <nav>
         <ul class="nav_links">
           <li>
-            <a href="#">Internshipsssssss</a>
+            <a href="#">Internships</a>
           </li>
           <li>
             <a href="#">Online Training <span id="headOffer">80% OFF</span></a>
